0025482: Usage of progress indicator by a translation process of a STEP file into DECAF document

progress indicator added to STEPCAFControl_Reader::Transfer()