src/STEPCAFControl/STEPCAFControl_Reader.cxx
@@ -172,6 +172,7 @@
 #include <StepShape_EdgeLoop.hxx>
 #include <StepShape_HArray1OfOrientedEdge.hxx>
 #include <StepShape_HArray1OfShell.hxx>
+#include <Message_ProgressSentry.hxx>
 
 #ifdef OCCT_DEBUG
 //! Converts address of the passed shape (TShape) to string.
@@ -417,7 +418,7 @@ Standard_Boolean STEPCAFControl_Reader::Transfer (STEPControl_Reader &reader,
 {
   reader.ClearShapes();
   Standard_Integer i;
-  
+
   // Read all shapes
   Standard_Integer num = reader.NbRootsForTransfer();
   if ( num <=0 ) return Standard_False;
@@ -431,23 +432,31 @@ Standard_Boolean STEPCAFControl_Reader::Transfer (STEPControl_Reader &reader,
   num = reader.NbShapes();
   if ( num <=0 ) return Standard_False;
 
+  Handle(Interface_InterfaceModel) Model = reader.Model();
+  Standard_Integer nb = Model->NbEntities();
+
+  STEPConstruct_ExternRefs ExtRefs ( reader.WS() );
+  Standard_Integer nbRefs = ExtRefs.NbExternRefs();
+
+  Handle(Transfer_TransientProcess) process = reader.WS()->MapReader();
+  Standard_Integer aSentryNum = asOne ? num : 2*num + nb + nbRefs;
+  Message_ProgressSentry PS ( process->GetProgress(), "Root", 0, aSentryNum, 1 );
+
   // Fill a map of (top-level) shapes resulting from that transfer
   // Only these shapes will be considered further
   TopTools_MapOfShape ShapesMap, NewShapesMap;
-  for ( i=1; i <= num; i++ ) FillShapesMap ( reader.Shape(i), ShapesMap );
+  for ( i=1; i <= num && PS.More(); i++, PS.Next() ) FillShapesMap ( reader.Shape(i), ShapesMap );
   
   // Collect information on shapes originating from SDRs
   // this will be used to distinguish compounds representing assemblies
   // from the ones representing hybrid models and shape sets
   STEPCAFControl_DataMapOfShapePD ShapePDMap;
   STEPCAFControl_DataMapOfPDExternFile PDFileMap;
-  Handle(Interface_InterfaceModel) Model = reader.Model();
-  Handle(Transfer_TransientProcess) TP = reader.WS()->TransferReader()->TransientProcess();
-  Standard_Integer nb = Model->NbEntities();
 
+  Handle(Transfer_TransientProcess) TP = reader.WS()->TransferReader()->TransientProcess();
   Handle(TColStd_HSequenceOfTransient) SeqPDS = new TColStd_HSequenceOfTransient;
 
-  for (i = 1; i <= nb; i ++) {
+  for (i = 1; i <= nb && PS.More(); i ++, PS.Next()) {
     Handle(Standard_Transient) enti = Model->Value(i);
     if(enti->IsKind(STANDARD_TYPE(StepRepr_ProductDefinitionShape))) {
       // sequence for acceleration ReadMaterials
@@ -488,9 +497,9 @@ Standard_Boolean STEPCAFControl_Reader::Transfer (STEPControl_Reader &reader,
 
   // Load external references (only for relevant SDRs)
   // and fill map SDR -> extern file
-  STEPConstruct_ExternRefs ExtRefs ( reader.WS() );
+
   ExtRefs.LoadExternRefs();
-  for ( i=1; i <= ExtRefs.NbExternRefs(); i++ ) {
+  for ( i=1; i <= nbRefs && PS.More(); i++, PS.Next() ) {
     // check extern ref format
     Handle(TCollection_HAsciiString) format = ExtRefs.Format(i);
     if ( ! format.IsNull() ) {
@@ -556,7 +565,7 @@ Standard_Boolean STEPCAFControl_Reader::Transfer (STEPControl_Reader &reader,
   if ( asOne )
     Lseq.Append ( AddShape ( reader.OneShape(), STool, NewShapesMap, ShapePDMap, PDFileMap, map ) );
   else {
-    for ( i=1; i <= num; i++ ) {
+    for ( i=1; i <= num && PS.More(); i++, PS.Next() ) {
       Lseq.Append ( AddShape ( reader.Shape(i), STool, NewShapesMap, ShapePDMap, PDFileMap, map ) );
     }
   }
